--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-
+    <link rel="stylesheet" href="style.css">
     <title>
       Frontend Mentor | Huddle landing page with single introductory section
     </title>
@@ -26,10 +25,33 @@
         color: hsl(228, 45%, 44%);
       }
     </style>
+    <link rel="stylesheet" href="./style.css">
   </head>
-  <body>
-    Build The Community Your Fans Will Love Huddle re-imagines the way we build
-    communities. You have a voice, but so does your audience. Create connections
-    with your users as you engage in genuine discussion. Register
+  <body
+    <div class="fondo"></div>
+    <nav>
+        <img src="./images/logo.svg" alt="">
+    </nav>
+    <main>
+      <div class="main-ilutracion">
+        <img src="./images/illustration-mockups.svg" alt="">
+      </div>
+      <div class="main-text">
+        <h1>Build The Community Your Fans Will Love</h1>
+        <p>Huddle re-imagines the way we build
+          communities. You have a voice, but so does your audience. Create connections
+          with your users as you engage in genuine discussion.</p>
+          <button class="boton" type="submit" name="Register"><span>Register</span></button>
+      </div>
+    </main>
+    <footer>
+      <div class="contenedor">
+        <ul>
+          <li><a href=""><img src="./images/001-facebook-logo-in-circular-shape.svg" alt=""></a></li>
+          <li><a href=""><img src="./images/002-twitter.svg" alt=""></a></li>
+          <li><a href=""><img src="./images/003-instagram.svg" alt=""></a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
